foam.css
/*
 * Copyright 2012 Google Inc. All Rights Reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

body{
    font-family:"Lucida Grande", "Lucida Sans Unicode", Verdana, Arial, Helvetica, sans-serif;
    font-size:12px;
}
p, h1, form, button{
    border:0; margin:0; padding:0;
}

.spacer {clear:both; height:1px;}

.foamform{
    margin:0 auto;
    width:450px;
    padding:14px;
}

.stackview-viewarea {
    width:100%;
}

/* ----------- detailView ----------- */

.detailView {
    border2:solid 2px #dddddd;
    border:solid 2px #b7ddf2;
    background:#ebebeb;
    background2:#ebf4fb;
}

.detailView .heading {
    float:left;
    font-size:14px;
    font-weight:bold;
    margin-bottom:8px;
}

.detailView .label{
    font-size:14px;
    display:block;
    font-weight:bold;
    text-align:right;
    float:left;
}

.detailView input{
    float:left;
    font-size:12px;
    padding:4px 2px;
    border:solid 1px #aacfe4;
    margin:2px 0 0px 10px;
}

/* ----------- summaryView ----------- */

.summaryView {
    background:'white';
    width:100%;
    table-layout:fixed;
}

.summaryView .label{
    font-size:12px;
    display:block;
    font-weight:bold;
    text-align:right;
    width:120px;
    float:left;
}

.summaryView .value{
    float:left;
    font-size:12px;
    padding-left: 8px;
    border2:solid 1px #aacfe4;
    margin:2px 15px 2px 0px;
}


.foamSearchView select{
  font-family: 'Courier New', Courier, monospace;
}

/* ----------- summaryView ----------- */

.helpView {
    width:100%;
}

.helpView .intro{
    padding-top:10px;
    font-size:16px;
    font-weight:bold;
}

.helpView .label{
    padding-top:10px;
    font-size:14px;
    font-weight:bold;
}

.helpView .text{
    width:100%;
    font-size:14px;
    padding-left: 8px;
    margin:2px 15px 2px 0px;
}


/* ----------- stylized ----------- */
#stylized {
    border:solid 2px #b7ddf2;
    background:#ebf4fb;
}
#stylized h1 {
    font-size:14px;
    font-weight:bold;
    margin-bottom:8px;
}
#stylized p{
    font-size:11px;
    color:#666666;
    margin-bottom:20px;
    border-bottom:solid 1px #b7ddf2;
    padding-bottom:10px;
}
#stylized label{
    display:block;
    font-weight:bold;
    text-align:right;
    width:140px;
    float:left;
}
#stylized .small{
    color:#666666;
    display:block;
    font-size:11px;
    font-weight:normal;
    text-align:right;
    width:140px;
}
#stylized input{
    float:left;
    font-size:12px;
    padding:4px 2px;
    border:solid 1px #aacfe4;
    margin:2px 0 20px 10px;
    width:200px;
}
#stylized button{
    background:#666666;
    clear:both;
    color:#FFFFFF;
    font-size:11px;
    font-weight:bold;
    height:31px;
    line-height:31px;
    margin-left:150px;
    text-align:center;
    width:125px;
}



.foamTable
{
	background: #fff;
	border-collapse: collapse;
	font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
	font-size: 12px;
	margin: 10px; 
	table-layout:fixed;
	text-align: left;
	width: 100%;
}
.BookmarkTable
{
	width: 800px;
}
<!-- margin was 45 above -->
.foamTable caption
{
	font-size: 16px;
	font-weight: bold;
	color: #039;
	padding: 10px 8px;
	text-align: left;
}
.foamTable tr
{
	border-left: 2px solid #fff;
	border-right: 2px solid #fff;
	border-top: 2px solid #fff;
}
.foamTable th
{
	font-size: 14px;
	font-weight: normal;
	color: #039;
	padding: 10px 8px;
	border-bottom: 2px solid #6678b1;
}
.foamTable td
{
	color: #669;
	padding: 8px 8px 0 8px;
}
.foamTable tbody tr:hover td
{
	color: #009;
        background: #eee;
}
.foamTable tr.rowSelected
{
	color: #900;
        background: #eee;
	border: 2px solid #f00;
}


.myButton {
	-moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
	-webkit-box-shadow:inset 0px 1px 0px 0px #ffffff;
	box-shadow:inset 0px 1px 0px 0px #ffffff;
	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #ededed), color-stop(1, #dfdfdf) );
	background:-moz-linear-gradient( center top, #ededed 5%, #dfdfdf 100% );
	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ededed', endColorstr='#dfdfdf');
	background-color:#ededed;
	-moz-border-radius:6px;
	-webkit-border-radius:6px;
	border-radius:6px;
	border:1px solid #dcdcdc;
	display:inline-block;
	color:#777777;
	font-family:arial;
	font-size:12px;
	font-weight:bold;
	padding:4px 16px;
	text-decoration:none;
	text-shadow:1px 1px 0px #ffffff;
}.myButton:hover {
	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #dfdfdf), color-stop(1, #ededed) );
	background:-moz-linear-gradient( center top, #dfdfdf 5%, #ededed 100% );
	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#dfdfdf', endColorstr='#ededed');
	background-color:#dfdfdf;
}.myButton:active {
	position:relative;
	top:1px;
}


.scrollSpacer {
    height:52;
}


td, th {
  white-space: nowrap;
  overflow: hidden;
  text-overflow:ellipsis;
}

select {
  background-color:rgb(240,240,240);
  margin-bottom: 15px;
}

.foamSearchViewLabel {
  margin-top: 5px;
  padding-left: 4px;
}

.searchTitle {
  color:#039;
  font-size: 16px;
  padding-left: 5px;
}

